<resources>
    <string name="app_name">Analytica</string>

    <!-- Strings related to activity_login.xml and Login.java -->
    <string name="enter_username">Username</string>
    <string name="enter_password">Password</string>
    <string name="login">Login</string>
    <string name="have_account">Don\'t have an account?</string>
    <string name="signUp">Sign Up</string>
    <!-- ____________________________________________________ -->

    <!-- Strings related to activity_sign_up.xml and SignUp.java -->
    <string name="register_rePassword">Re-enter Password</string>
    <string name="register_username">Enter Username</string>
    <string name="register_password">Enter Password</string>
    <string name="register">Register</string>

    <!-- String related to activity_home_screen.xml and HomeScreen.java -->
    <string name="displayMessage">display</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="graph">Graph</string>
    <string name="category">Category</string>

</resources>
